# KAQU_2025

./: README.md
kaqu_controller/kaqu_controller/KaquCmdManager/: AnglePublisher.py  KaquParams.py  RobotManagerNode.py
kaqu_controller/kaqu_controller/KaquIK/: InverseKinematics.py
kaqu_controller/kaqu_controller/Kaquctrl/: RestController.py  TrotGaitController.py
kaqu_gazebo_sim/: CMakeLists.txt  README.md  package.xml
kaqu_gazebo_sim/src/: kaqu_gazebo_joint_controller.cpp
kaqu_input_manager/: CMakeLists.txt  README.md  kaqu_teleop.launch.py  kaqu_teleop_joy.cpp  package.xml
kaqu_input_manager/launch/: kaqu_teleop.launch.py
kaqu_input_manager/src/: kaqu_teleop_joy.cpp
kaqu_msgs/: README.md
